[gd_scene load_steps=2 format=3 uid="uid://cshq74vvxqoqj"]

[ext_resource type="Script" path="res://view/hud/hcaptcha/hcaptcha_test.gd" id="1"]

[node name="HCaptchaTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 500.0
offset_bottom = 450.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "hCaptcha Test Interface"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Status: Initializing..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TokenLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Token: (none)"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ShowButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Show hCaptcha"

[node name="HideButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Hide hCaptcha"

[node name="ResetButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Reset hCaptcha"

[node name="GetResponseButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Get Response Token"

[node name="HSeparator4" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Instructions:
1. Click 'Show hCaptcha' to display the challenge
2. Complete the captcha in the browser overlay
3. Click 'Get Response Token' to see the result
4. Use 'Reset' to clear and try again"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CloseButtonContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HSeparator5" type="HSeparator" parent="Panel/VBoxContainer/CloseButtonContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/CloseButtonContainer"]
layout_mode = 2
text = "Close & Return"
